--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "symfony/assetic-bundle": "^2.8",
         "gedmo/doctrine-extensions": "^2.4",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
-        "doctrine/doctrine-fixtures-bundle": "dev-master"
+        "doctrine/doctrine-fixtures-bundle": "dev-master",
+        "jms/serializer-bundle": "^1.1",
+        "friendsofsymfony/rest-bundle": "^1.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
