--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -122,3 +122,5 @@ fos_rest:
         default_engine: twig
     routing_loader:
         default_format: json
+    serializer:
+        serialize_null: true
