imaginebundle : génération d'image

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -124,3 +124,10 @@ fos_rest:
         default_format: json
     serializer:
         serialize_null: true
+
+liip_imagine:
+    filter_sets:
+        thumb_list:
+            quality: 90
+            filters:
+                thumbnail: {size: [286, 215], mode: outbound }
