--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "friendsofsymfony/jsrouting-bundle": "^1.6",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "jms/serializer-bundle": "^1.1",
-        "friendsofsymfony/rest-bundle": "^1.7"
+        "friendsofsymfony/rest-bundle": "^1.7",
+        "liip/imagine-bundle": "^1.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
