--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+media:
+    resource: "@MediaBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 rest_api:
     resource: "@RestAPIBundle/Controller/"
     type:     annotation
