--- a/src/CMS/Bundle/MediaBundle/Resources/config/services.yml
+++ b/src/CMS/Bundle/MediaBundle/Resources/config/services.yml
@@ -11,3 +11,8 @@ services:
         public: true
         tags:
             - { name: twig.extension }
+
+    cms.media.manager:
+        class: CMS\Bundle\MediaBundle\Manager\MediaManager
+        arguments: ['@kernel', '@cms.media.repository.media']
+
