--- a/src/CMS/Bundle/ContactBundle/Resources/config/services.yml
+++ b/src/CMS/Bundle/ContactBundle/Resources/config/services.yml
@@ -1,4 +1,6 @@
 services:
-#    contact.example:
-#        class: CMS\Bundle\ContactBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    cms.contact_form.twig_extension:
+        class: CMS\Bundle\ContactBundle\Twig\ContactFormExtension
+        public: false
+        tags:
+            - { name: twig.extension }
