--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -85,6 +85,7 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        entity_listener_resolver: cms.content.doctrine.entity_listener_resolver
 
 # Swiftmailer Configuration
 swiftmailer:
