corrections sur les formulaires, ajout des preferences dans le menu et ajout d'isotope dans le template

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,8 +1,3 @@
-media:
-    resource: "@MediaBundle/Controller/"
-    type:     annotation
-    prefix:   /
-
 menu:
     resource: "@MenuBundle/Controller/"
     type:     annotation
@@ -12,6 +7,11 @@ front:
     resource: "@FrontBundle/Controller/"
     type:     annotation
     prefix:   /
+
+media:
+    resource: "@MediaBundle/Controller/"
+    type:     annotation
+    prefix:   /admin/media
 
 rest_api:
     resource: "@RestAPIBundle/Controller/"
