--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "jms/serializer-bundle": "^1.1",
         "friendsofsymfony/rest-bundle": "^1.7",
-        "liip/imagine-bundle": "^1.5"
+        "liip/imagine-bundle": "^1.5",
+        "php-instagram-api/php-instagram-api": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
