fonctionnement des widgets

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+core_widget:
+    resource: "@CoreBundle/Controller/WidgetController.php"
+    type:     annotation
+
 menu:
     resource: "@MenuBundle/Controller/"
     type:     annotation
