--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "jms/serializer-bundle": "^1.1",
         "friendsofsymfony/rest-bundle": "^1.7",
         "liip/imagine-bundle": "^1.5",
-        "php-instagram-api/php-instagram-api": "dev-master"
+        "php-instagram-api/php-instagram-api": "dev-master",
+        "twig/extensions": "^1.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
