--- a/src/CMS/Bundle/ContentBundle/Resources/config/services.yml
+++ b/src/CMS/Bundle/ContentBundle/Resources/config/services.yml
@@ -59,3 +59,6 @@ services:
         arguments: [ "@service_container" ]
         tags:
             -  { name: doctrine.entity_listener }
+
+    cms.content.api.manager:
+        class: CMS\Bundle\ContentBundle\Manager\ApiManager
