--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,4 +4,7 @@ parameters:
 #    parameter_name: value
 
 services:
-
+    twig.extension.text:
+        class: Twig_Extensions_Extension_Text
+        tags:
+            - { name: twig.extension }
