--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -132,9 +132,7 @@ liip_imagine:
             quality: 90
             filters:
                 thumbnail: {size: [440, 384], mode: outbound }
-
-services:
-    twig.extension.intl:
-       class: Twig_Extensions_Extension_Intl
-       tags:
-           - { name: twig.extension }
+        thumb_post:
+            quality: 90
+            filters:
+                thumbnail: {size: [800, 550], mode: outbound }
