--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -132,6 +132,10 @@ liip_imagine:
             quality: 90
             filters:
                 thumbnail: {size: [440, 384], mode: outbound }
+        thumb_related:
+            quality: 90
+            filters:
+                thumbnail: {size: [375, 249], mode: outbound }
         thumb_post:
             quality: 90
             filters:
