--- a/src/CMS/Bundle/FrontBundle/Resources/config/services.yml
+++ b/src/CMS/Bundle/FrontBundle/Resources/config/services.yml
@@ -1,4 +1,3 @@
 services:
-#    front.example:
-#        class: CMS\Bundle\FrontBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    cms.front.tools:
+        class: CMS\Bundle\FrontBundle\Manager\ToolsManager
