--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -12,6 +12,7 @@ parameters:
     ruby.bin: '/usr/bin/ruby'
     web_path: %kernel.root_dir%/../web
 
+
 framework:
     #esi:             ~
     translator:      { fallbacks: ["%locale%"] }
@@ -129,6 +130,17 @@ fos_rest:
         default_format: json
     serializer:
         serialize_null: true
+
+knp_paginator:
+    page_range: 5                      # default page range used in pagination control
+    default_options:
+        page_name: page                # page query parameter name
+        sort_field_name: sort          # sort field query parameter name
+        sort_direction_name: direction # sort direction query parameter name
+        distinct: true                 # ensure distinct results, useful when ORM queries are using GROUP BY statements
+    template:
+        pagination: ::admin/pagination.html.twig     # sliding pagination controls template
+        sortable: KnpPaginatorBundle:Pagination:sortable_link.html.twig # sort link template
 
 liip_imagine:
     filter_sets:
