--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "php-instagram-api/php-instagram-api": "dev-master",
         "twig/extensions": "^1.3",
         "mediafigaro/google-analytics-api-symfony": "^1.1",
-        "beberlei/DoctrineExtensions": "^1.0"
+        "beberlei/DoctrineExtensions": "^1.0",
+        "knplabs/knp-paginator-bundle": "^2.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
