--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "twig/extensions": "^1.3",
         "mediafigaro/google-analytics-api-symfony": "^1.1",
         "beberlei/DoctrineExtensions": "^1.0",
-        "knplabs/knp-paginator-bundle": "^2.5"
+        "knplabs/knp-paginator-bundle": "^2.5",
+        "abraham/twitteroauth": "^0.6.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
