--- a/src/CMS/Bundle/ContentBundle/Resources/config/services.yml
+++ b/src/CMS/Bundle/ContentBundle/Resources/config/services.yml
@@ -37,17 +37,17 @@ services:
     cms.content.fields:
         class: CMS\Bundle\ContentBundle\Classes\Fields
         calls:
-            - [ setTemplating, [ '@twig' ] ]
+            - [ setTemplating, [ '@templating' ] ]
 
     cms.content.map_field:
             class: CMS\Bundle\ContentBundle\Entity\Fields\MapField
             calls:
-                - [ setTemplating, [ '@twig' ] ]
+                - [ setTemplating, [ '@templating' ] ]
 
     cms.content.weather_field:
                 class: CMS\Bundle\ContentBundle\Entity\Fields\WeatherField
                 calls:
-                    - [ setTemplating, [ '@twig' ] ]
+                    - [ setTemplating, [ '@templating' ] ]
 
     cms.content.doctrine.entity_listener_resolver:
         class: CMS\Bundle\ContentBundle\Doctrine\EntityListenerResolver
@@ -58,7 +58,7 @@ services:
         class: CMS\Bundle\ContentBundle\Listener\ContentListener
         arguments: [ "@service_container" ]
         tags:
-            -  { name: doctrine.entity_listener }
+            -  { name: doctrine.entity_listener, event: postLoad }
 
     cms.content.api.manager:
         class: CMS\Bundle\ContentBundle\Manager\ApiManager
