--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -30,5 +30,8 @@ monolog:
         #    type:   chromephp
         #    level:  info
 
-#swiftmailer:
+swiftmailer:
+    transport: gmail
+    username: leoncorono@gmail.com
+    password: Monconno38
 #    delivery_address: me@example.com
