--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -46,6 +46,6 @@ security:
     access_control:
         - { path: ^/admin/install, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         - { path: ^/admin/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
-        - { path: ^/admin/forgot, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        - { path: ^/admin/request, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         - { path: ^/admin/change_password, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         - { path: ^/admin/*, roles: [ROLE_SUPER_ADMIN, ROLE_ADMIN], requires_channel: https }
