--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "twig/extensions": "^1.3",
         "beberlei/DoctrineExtensions": "^1.0",
         "knplabs/knp-paginator-bundle": "^2.5",
-        "abraham/twitteroauth": "^0.6.6"
+        "abraham/twitteroauth": "^0.6.6",
+        "excelwebzone/recaptcha-bundle": "^1.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
