--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,7 +1,7 @@
 # Use the front controller as index file. It serves as a fallback solution when
 # every other rewrite/redirect fails (e.g. in an aliased environment without
 # mod_rewrite). Additionally, this reduces the matching process for the
-# start page (path "/") because otherwise Apache will app_devly the rewriting rules
+# start page (path "/") because otherwise Apache will apply the rewriting rules
 # to each configured DirectoryIndex file (e.g. index.php, index.html, index.pl).
 DirectoryIndex app_dev.php
 
@@ -11,8 +11,8 @@ DirectoryIndex app_dev.php
 # when compiling LESS/Sass/CoffeScript assets.
 # Options FollowSymlinks
 
-# Disabling MultiViews prevents unwanted negotiation, e.g. "/app_dev" should not resolve
-# to the front controller "/app_dev.php" but be rewritten to "/app_dev.php/app_dev".
+# Disabling MultiViews prevents unwanted negotiation, e.g. "/app" should not resolve
+# to the front controller "/app.php" but be rewritten to "/app.php/app".
 <IfModule mod_negotiation.c>
     Options -MultiViews
 </IfModule>
@@ -23,7 +23,7 @@ DirectoryIndex app_dev.php
     # Determine the RewriteBase automatically and set it as environment variable.
     # If you are using Apache aliases to do mass virtual hosting or installed the
     # project in a subdirectory, the base path will be prepended to allow proper
-    # resolution of the app_dev.php file and to redirect to the correct URI. It will
+    # resolution of the app.php file and to redirect to the correct URI. It will
     # work in environments without path prefix as well, providing a safe, one-size
     # fits all solution. But as you do not need it in this case, you can comment
     # the following 2 lines to eliminate the overhead.
@@ -35,7 +35,7 @@ DirectoryIndex app_dev.php
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
     # Redirect to URI without front controller to prevent duplicate content
-    # (with and without `/app_dev.php`). Only do this redirect on the initial
+    # (with and without `/app.php`). Only do this redirect on the initial
     # rewrite by Apache and not on subsequent cycles. Otherwise we would get an
     # endless redirect loop (request -> rewrite to front controller ->
     # redirect -> request -> ...).
