Nouvel utilisateur définition du mot de passe

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -33,5 +33,5 @@ monolog:
 swiftmailer:
     transport: gmail
     username: leoncorono@gmail.com
-    password: Monconno38
-#    delivery_address: me@example.com
+    password: monconno38
+    delivery_address: dcorona@3c-e.com
