--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,11 +1,9 @@
 imports:
     - { resource: config.yml }
 
-#framework:
-#    validation:
-#        cache: validator.mapping.cache.doctrine.apc
-#    serializer:
-#        cache: serializer.mapping.cache.apc
+framework:
+    assets:
+        base_urls: ['https://choupdoune.fr']
 
 #doctrine:
 #    orm:
