--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,25 +1,187 @@
 imports:
-    - { resource: config.yml }
+    - { resource: parameters.yml }
+    - { resource: security.yml }
+    - { resource: services.yml }
+    - { resource: doctrine_extensions.yml }
+
+parameters:
+    locale: fr
+    db.table_prefix: cms_
+    sass.bin: '/usr/local/bin/sass'
+    compass.bin: '/usr/local/bin/compass'
+    ruby.bin: '/usr/bin/ruby'
+    web_path: '%kernel.root_dir%/../web'
+
 
 framework:
+    #esi:             ~
+    translator:      { fallbacks: ["%locale%"] }
+    secret:          "%secret%"
+    router:
+        resource: "%kernel.root_dir%/config/routing.yml"
+        strict_requirements: ~
+    form:            ~
+    csrf_protection: ~
+    validation:      { enable_annotations: true }
+    #serializer:      { enable_annotations: true }
+    templating:
+        engines: ['twig']
+        #assets_version: SomeVersionScheme
+    default_locale:  "%locale%"
+    trusted_hosts:   ~
+    trusted_proxies: ~
+    session:
+        # handler_id set to null will use default session handler from php.ini
+        handler_id:  ~
+    fragments:       ~
+    http_method_override: true
     assets:
-        base_urls: ['https://choupdoune.fr']
+        base_urls: ['https://choupdoune.fr/']
+        packages:
+            templates:
+                base_path: "/templates"
 
-#doctrine:
-#    orm:
-#        metadata_cache_driver: apc
-#        result_cache_driver: apc
-#        query_cache_driver: apc
+# Twig Configuration
+twig:
+    debug:            "%kernel.debug%"
+    strict_variables: "%kernel.debug%"
+    form_themes: ['::form.html.twig']
+    globals:
+        web_path: '%web_path%'
+    paths:
+        "%kernel.root_dir%/../templates": cms
+    exception_controller: cms.core.exception_controller:showAction
 
-monolog:
-    handlers:
-        main:
-            type:         fingers_crossed
-            action_level: error
-            handler:      nested
-        nested:
-            type:  stream
-            path:  "%kernel.logs_dir%/%kernel.environment%.log"
-            level: debug
-        console:
-            type:  console
+# Assetic Configuration
+assetic:
+    debug:          "%kernel.debug%"
+    use_controller: false
+    #bundles:        [ CoreBundle, FrontBundle ]
+    ruby: '%ruby.bin%'
+    assets:
+      breezy:
+        inputs:
+          - 'templates/Breezy/assets/font-awesome.min.css'
+          - 'templates/Breezy/assets/slicknav.css'
+          - 'templates/Breezy/style.css'
+          - 'templates/Breezy/assets/swiper.min.css'
+        filters: ['cssrewrite', 'uglifycss']
+      breezy_js:
+        inputs:
+          - 'templates/Breezy/assets/js/swiper.jquery.min.js'
+          - 'templates/Breezy/assets/js/masonry.pkgd.min.js'
+          - 'templates/Breezy/assets/js/component.js'
+          - 'templates/Breezy/assets/js/app.js'
+          - 'templates/Breezy/assets/js/skycons.js'
+          - 'templates/Breezy/assets/js/barba.min.js'
+          - 'templates/Breezy/assets/js/transition.js'
+        filters: ['uglifyjs2']
+    filters:
+        cssrewrite: ~
+        sass:
+            bin: '%sass.bin%'
+        compass:
+            bin: '%compass.bin%'
+        jsqueeze: ~
+        uglifycss:
+          bin: ./app/Resources/node_modules/uglifycss/uglifycss
+        uglifyjs2:
+          bin: ./app/Resources/node_modules/uglify-js/bin/uglifyjs
+
+
+# Doctrine Configuration
+doctrine:
+    dbal:
+        driver:   pdo_mysql
+        host:     "%database_host%"
+        port:     "%database_port%"
+        dbname:   "%database_name%"
+        user:     "%database_user%"
+        password: "%database_password%"
+        charset:  UTF8
+        # if using pdo_sqlite as your database driver:
+        #   1. add the path in parameters.yml
+        #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
+        #   2. Uncomment database_path in parameters.yml.dist
+        #   3. Uncomment next line:
+        #     path:     "%database_path%"
+
+    orm:
+        auto_generate_proxy_classes: "%kernel.debug%"
+        naming_strategy: doctrine.orm.naming_strategy.underscore
+        auto_mapping: true
+        entity_listener_resolver: cms.content.doctrine.entity_listener_resolver
+        dql:
+            datetime_functions:
+                month: DoctrineExtensions\Query\Mysql\Month
+                year: DoctrineExtensions\Query\Mysql\Year
+
+# Swiftmailer Configuration
+swiftmailer:
+    transport: "%mailer_transport%"
+    username:  "%mailer_user%"
+    password:  "%mailer_password%"
+    spool:     { type: memory }
+
+core:
+    theme:
+        dir: "%kernel.root_dir%/../templates"
+
+
+sensio_framework_extra:
+    view:   { annotations: false }
+    router: { annotations: true }
+
+fos_js_routing:
+     routes_to_expose: [ (.*) ]
+
+fos_rest:
+    param_fetcher_listener: true
+    body_listener: true
+    format_listener: true
+    view:
+        view_response_listener: 'force'
+        formats:
+            json : true
+        templating_formats:
+            html: true
+        force_redirects:
+            html: true
+        failed_validation: HTTP_BAD_REQUEST
+        default_engine: twig
+    routing_loader:
+        default_format: json
+    serializer:
+        serialize_null: true
+
+knp_paginator:
+    page_range: 5                      # default page range used in pagination control
+    default_options:
+        page_name: page                # page query parameter name
+        sort_field_name: sort          # sort field query parameter name
+        sort_direction_name: direction # sort direction query parameter name
+        distinct: true                 # ensure distinct results, useful when ORM queries are using GROUP BY statements
+    template:
+        pagination: ::admin/pagination.html.twig     # sliding pagination controls template
+        sortable: KnpPaginatorBundle:Pagination:sortable_link.html.twig # sort link template
+
+liip_imagine:
+    filter_sets:
+        thumb_list:
+            quality: 90
+            filters:
+                thumbnail: {size: [440, 384], mode: outbound }
+        thumb_related:
+            quality: 90
+            filters:
+                thumbnail: {size: [375, 249], mode: outbound }
+        thumb_post:
+            quality: 90
+            filters:
+                thumbnail: {size: [800, 550], mode: outbound }
+
+content:
+    consumer_key: PqlXpURv8lReo0sLCBHHxLToR
+    consumer_secret: YQ1QBokY7afzfUNc1ENCHMRuiNTUgWXpPMsAFDbBMzESxETqUg
+    access_token: 17425459-dDEqdU9dB4FHv7PMN6wohgO1ZuTwVGgBt4QOra494
+    access_token_secret: YKnzZvQn9rNJet0x1J8sUbMo6JqUcUCwjPL710EcHtS0N
