--- a/templates/Breezy/assets/manifest.json
+++ b/templates/Breezy/assets/manifest.json
@@ -7,42 +7,42 @@
   "background_color": "#FFFFFF",
   "icons": [
     {
-      "src": "logo-72x72.png",
+      "src": "images/logo-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "logo-96x96.png",
+      "src": "images/logo-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "logo-128x128.png",
+      "src": "images/logo-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "logo-144x144.png",
+      "src": "images/logo-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "logo-152x152.png",
+      "src": "images/logo-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "logo-192x192.png",
+      "src": "images/logo-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "logo-384x384.png",
+      "src": "images/logo-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "logo-512x512.png",
+      "src": "images/logo-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
