--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -187,3 +187,17 @@ content:
     consumer_secret: YQ1QBokY7afzfUNc1ENCHMRuiNTUgWXpPMsAFDbBMzESxETqUg
     access_token: 17425459-dDEqdU9dB4FHv7PMN6wohgO1ZuTwVGgBt4QOra494
     access_token_secret: YKnzZvQn9rNJet0x1J8sUbMo6JqUcUCwjPL710EcHtS0N
+
+
+monolog:
+    handlers:
+        main:
+            type:         fingers_crossed
+            action_level: error
+            handler:      nested
+        nested:
+            type:  stream
+            path:  "%kernel.logs_dir%/%kernel.environment%.log"
+            level: debug
+        console:
+            type:  console
