--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -17,10 +17,11 @@ assetic:
 monolog:
     handlers:
         main:
-            type: stream
+            type: rotating_file
             path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
             channels: [!event]
+            max_files: 10
         console:
             type:   console
             channels: [!event, !doctrine]
