--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -17,11 +17,10 @@ assetic:
 monolog:
     handlers:
         main:
-            type: rotating_file
+            type: stream
             path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
             channels: [!event]
-            max_files: 10
         console:
             type:   console
             channels: [!event, !doctrine]
