--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -175,6 +175,10 @@ liip_imagine:
             quality: 90
             filters:
                 thumbnail: {size: [440, 384], mode: outbound }
+        thumb_list_low:
+            quality: 10
+            filters:
+                thumbnail: {size: [440, 384], mode: outbound }
         thumb_related:
             quality: 90
             filters:
